--- a/style.css
+++ b/style.css
@@ -1,11 +1,10 @@
-<<<<<<< HEAD
 body{
     background-color: lavenderblush;
     color: palevioletred;
 }
 h3{
-    color: blueviolet;
-=======
+    color: forestgreen;
+}
 h1 {
 	font-size: 60px;
 	font-weight: normal;
@@ -13,5 +12,4 @@ h1 {
     font-family: 'Chelsea Market', Georgia, serif;
     color: #000;
 	line-height: 1;
->>>>>>> 2553a97b570bcebe404e6994e2aec7cdcc119437
 }
