--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ h3{
     color: forestgreen;
 }
 h1 {
-	font-size: 60px;
+	font-size: 20px;
 	font-weight: normal;
 	margin: 0;
     font-family: 'Chelsea Market', Georgia, serif;
@@ -14,7 +14,7 @@ h1 {
 	line-height: 1;
 }
 h2 {
-	font-size: 70px;
+	font-size: 40px;
 	font-weight: normal;
 	margin: 0;
 	color: #FFB000;
@@ -25,4 +25,11 @@ h2{
     padding-bottom: 16px;
 	padding-left: 34px;
 
+}
+body {
+	background: url("http://google.com");
+	-ms-scrollbar-base-color: pink;
+}
+body{
+	group-reset: h1,h2,h3,h4;
 }
